center align audio content and fix errors from html validator

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -89,7 +89,7 @@ body {
 
 /*-------Page Headers--------*/
 
-#page-head {
+.page-head {
     color: #fff;
     text-transform: uppercase;
 }
@@ -320,8 +320,8 @@ body {
         justify-content: center;
         align-items: center;
     }
-    
-    .card {
+
+    .page-card {
         margin: 20px;
     }
 
@@ -351,6 +351,7 @@ body {
         padding-right: 10px;
     }
 }
+
 
 /*------------Planning Cards-----------*/
 
@@ -401,7 +402,6 @@ body {
     letter-spacing: 1px;
 }
 
-
 /*------------Buttons-----------*/
 
 .btn {
@@ -433,7 +433,7 @@ body {
     color: #484b4e;
 }
 
-.card-btn:focus {
+.btn.card-btn:focus {
     outline: none;
     box-shadow: none;
 }
